--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 </div>
               </div>
           <div class="col-lg-6">
-        <a href="https://anastasiyatanas.github.io/pretty-project-2/">
+        <a href="https://anastasiyatanas.github.io/bubble-room/">
             <div id="bubbleRoomImg" class="free-lance">
             <img class="img-fluid" src="img/background-close-up-color-1227648.jpg" alt="">
             </div>
